// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropDown should open and close the dropdown when you click the button 1`] = `
.c0 {
  -webkit-transition: all 150ms ease-in;
  transition: all 150ms ease-in;
  display: inline-block;
  width: 0;
  height: 0;
  margin-left: 4px;
  vertical-align: middle;
  border-top: 4px solid;
  border-right: 4px solid transparent;
  border-left: 4px solid transparent;
}

<div>
  <div>
    <button
      aria-haspopup="true"
      aria-label="Notifications"
      aria-owns="menu-list"
      class="MuiButtonBase-root MuiButton-root MuiButton-text"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Click Me
        <b
          class="c0"
        />
      </span>
    </button>
    <div
      role="tooltip"
      style="position: absolute;"
      x-placement="bottom-start"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
        style="opacity: 1; transform: scale(1, 1); transform-origin: 0 0 0; transition: opacity 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      >
        <ul
          class="MuiList-root MuiList-padding"
          role="menu"
          tabindex="-1"
        >
          <li
            aria-disabled="false"
            class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
            role="menuitem"
            tabindex="-1"
          >
            First
            <span
              class="MuiTouchRipple-root"
            />
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDown should open and close the dropdown when you click the button 2`] = `
<div>
  <div>
    <button
      aria-haspopup="true"
      aria-label="Notifications"
      class="MuiButtonBase-root MuiButton-root MuiButton-text"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Click Me
        <b
          class="sc-AykKC eHrjBS"
        />
      </span>
    </button>
  </div>
</div>
`;

exports[`DropDown should render the drop down 1`] = `
.c0 {
  -webkit-transition: all 150ms ease-in;
  transition: all 150ms ease-in;
  display: inline-block;
  width: 0;
  height: 0;
  margin-left: 4px;
  vertical-align: middle;
  border-top: 4px solid;
  border-right: 4px solid transparent;
  border-left: 4px solid transparent;
}

<div>
  <div>
    <button
      aria-haspopup="true"
      aria-label="Notifications"
      class="MuiButtonBase-root MuiButton-root MuiButton-text"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Click Me
        <b
          class="c0"
        />
      </span>
    </button>
  </div>
</div>
`;
